WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59451
Web Inspector: New Style is not working (UI glitch)
https://bugs.webkit.org/show_bug.cgi?id=59451
Summary
Web Inspector: New Style is not working (UI glitch)
Pavel Feldman
Reported
2011-04-26 06:07:17 PDT
Patch to follow.
Attachments
Patch
(10.81 KB, patch)
2011-04-26 06:42 PDT
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Patch
(11.97 KB, patch)
2011-04-26 07:02 PDT
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-04-26 06:42:51 PDT
Created
attachment 91096
[details]
Patch
Pavel Feldman
Comment 2
2011-04-26 07:02:34 PDT
Created
attachment 91098
[details]
Patch
Yury Semikhatsky
Comment 3
2011-04-26 07:22:18 PDT
Comment on
attachment 91098
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91098&action=review
> Source/WebCore/inspector/front-end/CSSStyleModel.js:185 > + var documentElement = node && node.ownerDocumentElement();
is it possible that ownerDocumentElement is undefined? if not prefer early return
Pavel Feldman
Comment 4
2011-04-26 07:24:20 PDT
Committed
r84909
: <
http://trac.webkit.org/changeset/84909
>
WebKit Review Bot
Comment 5
2011-04-26 07:57:08 PDT
http://trac.webkit.org/changeset/84909
might have broken SnowLeopard Intel Release (Tests)
Csaba Osztrogonác
Comment 6
2011-04-26 08:12:03 PDT
(In reply to
comment #5
)
>
http://trac.webkit.org/changeset/84909
might have broken SnowLeopard Intel Release (Tests)
And Qt and I think other bots too. --- /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/inspector-enabled/dom-storage-open-expected.txt 2011-04-26 07:46:48.000000000 -0700 +++ /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/inspector-enabled/dom-storage-open-actual.txt 2011-04-26 07:46:48.000000000 -0700 @@ -1,5 +1 @@ Tests that Web Inspector gets populated with DOM storages that were opened before inspector is shown. - -Domain: 127.0.0.1 -IsLocalStorage: false -
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug