Source/WebCore/inspector/front-end/StylesSidebarPane.js
@@ -567,6 +567,7 @@ WebInspector.StylesSidebarPane.prototype = {
 
     _createNewRule: function(event)
     {
+        this.expanded = true;
         this.addBlankSection().startEditingSelector();
     },
 
